force-app/main/default/objects/Scrum_Snapshot_History__b/Scrum_Snapshot_History__b.object-meta.xml
<CustomObject>
    <label>Services Scrum Snapshot</label>
    <pluralLabel>Services Scrum Snapshots</pluralLabel>
</CustomObject>