force-app/main/default/objects/Scrum_Snapshot_History__b/fields/Comp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Comp_Amount__c</fullName>
    <label>Comp Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>