force-app/main/default/objects/Scrum_Snapshot_History__b/fields/Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Group__c</fullName>
    <label>Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>