force-app/main/default/objects/Scrum_Snapshot_History__b/fields/Services_Scrum_Snapshot_Name__c.field-meta.xml
<CustomField>
    <fullName>Services_Scrum_Snapshot_Name__c</fullName>
    <label>Services Scrum - Snapshot Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>